<resources>
    <string name="app_name">QICApp</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_selectService">SelectServiceActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="get_quote">Get \n Quote</string>
    <string name="motor_policy">Renew \n Motor Policy</string>
    <string name="manage_motor_policy">Manage \n Motor Claims</string>
    <string name="you_will_see">You Will See Input Here</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="try_agin">Try Again</string>
    <string name="today_offer">Today | Offers Following Services</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
