<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".speechtotext.SpeechToTextActivity">

    <EditText
        android:id="@+id/edit_input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/you_will_see"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/but_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/edit_input_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_input_name"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/but_tryagin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_agin"
        app:layout_constraintTop_toBottomOf="@+id/edit_input_name"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="@+id/edit_input_name"
        app:layout_constraintLeft_toRightOf="@+id/but_confirm"/>

</androidx.constraintlayout.ConstraintLayout>