<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sea_blue"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="10dp">

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/get_quote"
                android:textAllCaps="false"
                app:layout_constraintLeft_toLeftOf="@+id/g_left"
                app:layout_constraintRight_toRightOf="@+id/g_right"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textAllCaps="false"
                android:text="@string/motor_policy"
                app:layout_constraintLeft_toLeftOf="@+id/g_left"
                app:layout_constraintRight_toRightOf="@+id/g_right"
                app:layout_constraintTop_toBottomOf="@+id/button1"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textAllCaps="false"
                android:text="@string/manage_motor_policy"
                app:layout_constraintBottom_toBottomOf="@+id/g_buttom"
                app:layout_constraintLeft_toLeftOf="@+id/g_left"
                app:layout_constraintRight_toRightOf="@+id/g_right"
                app:layout_constraintTop_toBottomOf="@+id/button2"
                tools:ignore="MissingConstraints" />


            <android.support.constraint.Guideline
                android:id="@+id/g_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.2" />

            <android.support.constraint.Guideline
                android:id="@+id/g_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8" />

            <android.support.constraint.Guideline
                android:id="@+id/g_buttom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.95" />

            <android.support.constraint.Guideline
                android:id="@+id/g_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.6" />

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</FrameLayout>